--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,600;1,14..32,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <title>Homework6</title>
 </head>
 <body>
@@ -41,6 +42,80 @@
 <img src="images/Button.png" alt="">
         </div>
     </header>
+    <section>
+        <div class="container">
+        <div class="block">
+      <h3>Work Process</h3>
+      <h2>How We Work</h2>
+        </div>
+        <div class="section-div">
+       <div class="box">
+     <div class="description-div">
+    <h5>Make Appointment</h5>
+    <p>Leverage agile frameworks provide
+        synopsishigh level overviews
+        value proposition. </p>
+        <p class="lastp">Testimonials</p>
+     </div>
+     <div class="icon-div">
+        <img class="iconimg" src="images/icon1.svg" alt="icon">
+     </div>
+       </div>
+
+       <div class="box">
+        <div class="description-div">
+       <h5>Make Appointment</h5>
+       <p>Leverage agile frameworks provide
+           synopsishigh level overviews
+           value proposition. </p>
+           <p class="lastp">Testimonials</p>
+        </div>
+        <div class="icon-div middle-div">
+           <img class="iconimg" src="images/icon2.svg" alt="icon">
+        </div>
+          </div>
+          <div class="box">
+            <div class="description-div">
+           <h5>Make Appointment</h5>
+           <p>Leverage agile frameworks provide
+               synopsishigh level overviews
+               value proposition. </p>
+               <p class="lastp">Testimonials</p>
+            </div>
+            <div class="icon-div">
+               <img class="iconimg" src="images/icon3.svg" alt="icon">
+            </div>
+              </div>
+        </div>
+        </div>
+    </section>
+    <div class="image-wraper">
+<img  src="images/Rectangle 290.png" alt="">
+<div class="text-div">
+<h6>Short Video</h6>
+<h2 class="imageh2">Our Presentation</h2>
+<p class="imagep">Collaboratively administrate channels whereas virtual tailers
+    predominate procedures reliable supply chains.</p>
+    <div class="icon-div2">
+        <img src="images/Vector (1).svg" alt="">
+     </div>
+</div>
+    </div>
+    <footer>
+        <div class="footerdiv">
+<p class="footerp">Our Team</p>
+<h2 class="footerh2">Meet Our Experts</h2>
+        </div>
+        <div class="footer-div2">
+<div class="footer-box">
+<img class="footer-img" src="images/Image.jpg" alt="">
+<div class="name-div">
+<h3 class="nameh3">Nattasha Kelvin</h3>
+<p class="footer-p2">Managing Director</p>
+</div>
+</div>
+        </div>
+    </footer>
     
 </body>
 </html>
