--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -7,115 +8,137 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,600;1,14..32,600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <title>Homework6</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,600;1,14..32,600&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <title>Homework6</title>
 </head>
+
 <body>
     <header>
         <div class="header-container">
             <img src="images/Logo.svg" alt="logo">
-<nav class="header-nav">
-    <ul class="header-ul">
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="#">About Us</a>
-        </li>
-        <li>
-            <a href="#">Pages</a>
-            <i class="fa-solid fa-chevron-down"></i>
-        </li>
-        <li>
-            <a href="#">Services</a>
-        </li>
-        <li>
-            <a href="#">Blog</a>
-        </li>
-        <li>
-            <a href="#">Contact Us</a>
-        </li>
-    </ul>
-</nav>
-<img src="images/Button.png" alt="">
+            <nav class="header-nav">
+                <ul class="header-ul">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Pages</a>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </nav>
+            <img src="images/Button.png" alt="">
         </div>
     </header>
     <section>
         <div class="container">
-        <div class="block">
-      <h3>Work Process</h3>
-      <h2>How We Work</h2>
-        </div>
-        <div class="section-div">
-       <div class="box">
-     <div class="description-div">
-    <h5>Make Appointment</h5>
-    <p>Leverage agile frameworks provide
-        synopsishigh level overviews
-        value proposition. </p>
-        <p class="lastp">Testimonials</p>
-     </div>
-     <div class="icon-div">
-        <img class="iconimg" src="images/icon1.svg" alt="icon">
-     </div>
-       </div>
+            <div class="block">
+                <h3>Work Process</h3>
+                <h2>How We Work</h2>
+            </div>
+            <div class="section-div">
+                <div class="box">
+                    <div class="description-div">
+                        <h5>Make Appointment</h5>
+                        <p>Leverage agile frameworks provide
+                            synopsishigh level overviews
+                            value proposition. </p>
+                        <p class="lastp">Testimonials</p>
+                    </div>
+                    <div class="icon-div">
+                        <img class="iconimg" src="images/icon1.svg" alt="icon">
+                    </div>
+                </div>
 
-       <div class="box">
-        <div class="description-div">
-       <h5>Make Appointment</h5>
-       <p>Leverage agile frameworks provide
-           synopsishigh level overviews
-           value proposition. </p>
-           <p class="lastp">Testimonials</p>
-        </div>
-        <div class="icon-div middle-div">
-           <img class="iconimg" src="images/icon2.svg" alt="icon">
-        </div>
-          </div>
-          <div class="box">
-            <div class="description-div">
-           <h5>Make Appointment</h5>
-           <p>Leverage agile frameworks provide
-               synopsishigh level overviews
-               value proposition. </p>
-               <p class="lastp">Testimonials</p>
+                <div class="box">
+                    <div class="description-div">
+                        <h5>Make Appointment</h5>
+                        <p>Leverage agile frameworks provide
+                            synopsishigh level overviews
+                            value proposition. </p>
+                        <p class="lastp">Testimonials</p>
+                    </div>
+                    <div class="icon-div middle-div">
+                        <img class="iconimg" src="images/icon2.svg" alt="icon">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="description-div">
+                        <h5>Make Appointment</h5>
+                        <p>Leverage agile frameworks provide
+                            synopsishigh level overviews
+                            value proposition. </p>
+                        <p class="lastp">Testimonials</p>
+                    </div>
+                    <div class="icon-div">
+                        <img class="iconimg" src="images/icon3.svg" alt="icon">
+                    </div>
+                </div>
             </div>
-            <div class="icon-div">
-               <img class="iconimg" src="images/icon3.svg" alt="icon">
-            </div>
-              </div>
-        </div>
         </div>
     </section>
     <div class="image-wraper">
-<img  src="images/Rectangle 290.png" alt="">
-<div class="text-div">
-<h6>Short Video</h6>
-<h2 class="imageh2">Our Presentation</h2>
-<p class="imagep">Collaboratively administrate channels whereas virtual tailers
-    predominate procedures reliable supply chains.</p>
-    <div class="icon-div2">
-        <img src="images/Vector (1).svg" alt="">
-     </div>
-</div>
+        <img class="photo" src="images/Rectangle 290.png" alt="">
+        <div class="text-div">
+            <h6>Short Video</h6>
+            <h2 class="imageh2">Our Presentation</h2>
+            <p class="imagep">Collaboratively administrate channels whereas virtual tailers
+                predominate procedures reliable supply chains.</p>
+            <div class="icon-div2">
+                <img src="images/Vector (1).svg" alt="">
+            </div>
+        </div>
     </div>
     <footer>
         <div class="footerdiv">
-<p class="footerp">Our Team</p>
-<h2 class="footerh2">Meet Our Experts</h2>
+            <p class="footerp">Our Team</p>
+            <h2 class="footerh2">Meet Our Experts</h2>
         </div>
-        <div class="footer-div2">
-<div class="footer-box">
-<img class="footer-img" src="images/Image.jpg" alt="">
-<div class="name-div">
-<h3 class="nameh3">Nattasha Kelvin</h3>
-<p class="footer-p2">Managing Director</p>
-</div>
-</div>
+
+        <div class="flex-wraper">
+            <div class="footer-box">
+                <img src="images/Image.jpg" alt="">
+                <div class="white-box">
+                    <h3 class="lasth3">Nattasha Kelvin</h3>
+                    <h4 class="lasth4">Managing Director</h4>
+                </div>
+            </div>
+
+            <div class="footer-box">
+                <img src="images/image2.png" alt="">
+                <div class="white-box">
+                    <h3 class="lasth3">David Simpson</h3>
+                    <h4 class="lasth4">Designer</h4>
+                </div>
+            </div>
+
+            <div class="footer-box">
+                <img src="images/image3.png" alt="">
+                <div class="white-box">
+                    <h3 class="lasth3">Madeleine Grant</h3>
+                    <h4 class="lasth4">Marketing Specialist</h4>
+                </div>
+            </div>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
